--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ source_contact_type: general
 source_phone: +1 555-555-5555
 source_email: info@example.com
 source_catalog: data.gov
-profile_pic: 'http://energy.gov/sites/prod/files/styles/profile_piclink/public/DoE-Logo.jpeg'
+profile_pic: 'https://directory.dayda.org/assets/img/entities/department-of-energy.png'
 favicon: /assets/img/favicon.png
 url: 'http://department-of-energy.dayda.org'
 encoding: utf-8
